Enhance the #map container style to prevent overflow.

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -28,13 +28,18 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-
+  position: relative;
 }
 
 #map{
+  position: absolute;
+  top: $header-height;
+  bottom:0;
+  left: 0;
+  right: 0;
   width: 100%;
-  height: 100%;
-  background: $blue;
+  background: $white;
+
 }
 
 // tablet size
